@startuml Class Diagram - Invoice Generation Module (US 2.1)
!theme plain
skinparam classAttributeIconSize 0
skinparam classBorderColor #3B5998
skinparam classBackgroundColor #EEF2FF
skinparam classHeaderBackgroundColor #3B5998
skinparam classHeaderFontColor #FFFFFF
skinparam roundcorner 8
skinparam linetype ortho

title US 2.1 — Penerbitan Tagihan Otomatis\nClass Diagram (Laravel MVC — matches implemented code)

' ─── ENUMS ───────────────────────────────────────────────────────
enum OrderStatus {
  DRAFT = "draft"
  PENDING_APPROVAL = "pending_approval"
  APPROVED = "approved"
  WAITING_PAYMENT = "waiting_payment"
  PAID = "paid"
  CANCELLED = "cancelled"
  EXPIRED = "expired"
  ..
  +label() : string
  +badgeColor() : string
}

enum InvoiceStatus {
  ISSUED = "issued"
  PAID = "paid"
  CANCELLED = "cancelled"
  ..
  +label() : string
  +badgeClass() : string
}

' ─── ELOQUENT MODELS ─────────────────────────────────────────────
class User <<Model>> {
  +id : int
  +company_id : int|null
  +name : string
  +email : string
  +role : string
  +email_verified_at : Carbon|null
  --
  +company() : BelongsTo<Company>
  +createdOrders() : HasMany<Order>
  +approvedOrders() : HasMany<Order>
  +issuedInvoices() : HasMany<Invoice>
  +driver() : HasOne<Driver>
  +isAdminPenjualan() : bool
  +isManajerPembeli() : bool
  +isStafPembeli() : bool
  +isPetugasSpbu() : bool
}

class Company <<Model>> {
  +id : int
  +name : string
  +email : string
  +phone : string|null
  +address : string|null
  +npwp : string|null
  --
  +users() : HasMany<User>
  +orders() : HasMany<Order>
}

class Order <<Model>> {
  +id : int
  +order_number : string
  +company_id : int
  +created_by : int
  +approved_by : int|null
  +fuel_type : string
  +volume_liters : decimal
  +unit_price : decimal
  +delivery_location : string
  +scheduled_at : Carbon
  +status : OrderStatus
  +rejection_reason : string|null
  +approved_at : Carbon|null
  --
  +company() : BelongsTo<Company>
  +creator() : BelongsTo<User>
  +approver() : BelongsTo<User>
  +invoice() : HasOne<Invoice>
  +isApproved() : bool
  +hasInvoice() : bool
  +subtotal() : float
  +scopeApproved(Builder) : Builder
  +scopeWaitingPayment(Builder) : Builder
}

class Invoice <<Model>> {
  +id : int
  +invoice_number : string
  +order_id : int
  +issued_by : int
  +subtotal : decimal
  +ppn_rate : decimal
  +ppn_amount : decimal
  +total_amount : decimal
  +status : InvoiceStatus
  +pdf_path : string|null
  +issued_at : Carbon
  +paid_at : Carbon|null
  --
  +order() : BelongsTo<Order>
  +issuer() : BelongsTo<User>
  +virtualAccounts() : HasMany<VirtualAccount>
  +markAsPaid(Carbon) : void
  +activeVirtualAccount() : ?VirtualAccount
  +scopeIssued(Builder) : Builder
  +scopePaid(Builder) : Builder
}

class VirtualAccount <<Model>> {
  +id : int
  +invoice_id : int
  +va_number : string
  +bank_code : string
  +amount : decimal
  +expires_at : Carbon
  +status : string
  --
  +invoice() : BelongsTo<Invoice>
  +paymentCallbacks() : HasMany<PaymentCallback>
  +isExpired() : bool
  +isActive() : bool
}

class PaymentCallback <<Model>> {
  +id : int
  +virtual_account_id : int
  +bank_reference : string
  +amount_received : decimal
  +received_at : Carbon
  +is_valid : bool
  +error_message : string|null
  --
  +virtualAccount() : BelongsTo<VirtualAccount>
}

' ─── HTTP LAYER ──────────────────────────────────────────────────
class Controller <<Abstract>> {
  <<trait>> AuthorizesRequests
}

class AuthController <<Controller>> {
  +showLogin() : View|RedirectResponse
  +login(LoginRequest) : RedirectResponse
  +logout(Request) : RedirectResponse
}

class OrderController <<Controller>> {
  +index(Request) : View
  +show(Order) : View
}

class InvoiceController <<Controller>> {
  +index(Request) : View
  +store(StoreInvoiceRequest, Order) : RedirectResponse
  +show(Invoice) : View
  +download(Invoice, Request) : Response
}

' ─── FORM REQUESTS ───────────────────────────────────────────────
class LoginRequest <<FormRequest>> {
  +authorize() : bool
  +rules() : array
  +authenticate() : void
  -ensureIsNotRateLimited() : void
  -throttleKey() : string
}

class StoreInvoiceRequest <<FormRequest>> {
  +authorize() : bool
  +rules() : array
}

' ─── POLICY ──────────────────────────────────────────────────────
class InvoicePolicy <<Policy>> {
  +viewAny(User) : bool
  +view(User, Invoice) : bool
  +create(User, Order) : bool
  +download(User, Invoice) : bool
}

' ─── ACTIONS ─────────────────────────────────────────────────────
class GenerateInvoiceAction <<Action>> {
  -PPN_RATE : float = 0.11
  --
  +execute(Order, User) : Invoice
  -buildInvoiceNumber() : string
}

class GenerateInvoicePdfAction <<Action>> {
  +execute(Invoice) : string
}

' ─── SERVICE PROVIDER ────────────────────────────────────────────
class AppServiceProvider <<ServiceProvider>> {
  +boot() : void
  -configureRateLimiters() : void
}

' ─── MODEL RELATIONSHIPS ─────────────────────────────────────────
Company "1" --o{ "0..*" User      : employs
Company "1" --o{ "0..*" Order     : places
User "1" --o{ "0..*" Order        : creates (created_by)
User "1" --o{ "0..*" Order        : approves (approved_by)
User "1" --o{ "0..*" Invoice      : issues (issued_by)
Order "1" --o| "0..1" Invoice     : generates
Invoice "1" --o{ "0..*" VirtualAccount : has
VirtualAccount "1" --o{ "0..*" PaymentCallback : receives

Order --> OrderStatus
Invoice --> InvoiceStatus

' ─── HTTP WIRING ─────────────────────────────────────────────────
Controller <|-- AuthController
Controller <|-- OrderController
Controller <|-- InvoiceController

InvoiceController ..> InvoicePolicy           : authorizes via
InvoiceController ..> StoreInvoiceRequest     : validated by
InvoiceController ..> GenerateInvoiceAction   : delegates to
InvoiceController ..> GenerateInvoicePdfAction : on-demand regen

GenerateInvoiceAction ..> Invoice             : creates
GenerateInvoiceAction ..> GenerateInvoicePdfAction : calls after tx

GenerateInvoicePdfAction ..> Invoice          : reads & updates pdf_path

AppServiceProvider ..> InvoicePolicy          : registers
AppServiceProvider ..> LoginRequest           : configures rate limiter for

@enduml
